src/styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:wght@500;600;700&display=swap');

.route {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 18px;
  letter-spacing: 0.05em;
  color: #000000;
}

.title {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 700;
  font-size: 35px;
  line-height: 40px;
  color: #000000;
}

.description {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 22px;
  letter-spacing: 0.05em;
  color: #000000;
}

.nextBtn {
  border: 2px solid #000;
  border-radius: 100px;
  padding: 10px 40px;
  display: inline;
}

.backBtn {
  background: #E5E5E5;
  border-radius: 100px;
  width: 50px;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: center;
}

#qrcode-scanner {
  border: 2px solid #000000;
  box-sizing: border-box;
  border-radius: 10px;
  background-image: url(./assets/qrcode-border.svg);
  background-position: center;
  background-repeat: no-repeat;
}

